--- a/Task Manager/Task_Manager.csproj
+++ b/Task Manager/Task_Manager.csproj
@@ -228,9 +228,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMSandEmail.cs" />
     <Compile Include="viewModels\ComplainProjects.cs" />
+    <Compile Include="viewModels\finding_ticketContact.cs" />
     <Compile Include="viewModels\projectDropDownInTickets.cs" />
     <Compile Include="viewModels\ProjectGrid.cs" />
     <Compile Include="viewModels\ProjectInsert.cs" />
+    <Compile Include="viewModels\responseToComplain.cs" />
     <Compile Include="viewModels\response\TaskDropdown.cs" />
     <Compile Include="viewModels\response\taskResponse.cs" />
     <Compile Include="viewModels\status.cs" />
