--- a/Task Manager/Task_Manager.csproj
+++ b/Task Manager/Task_Manager.csproj
@@ -217,13 +217,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201706221030063_usman.cs" />
-    <Compile Include="Migrations\201706221030063_usman.Designer.cs">
-      <DependentUpon>201706221030063_usman.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706240902153_usman1.cs" />
-    <Compile Include="Migrations\201706240902153_usman1.Designer.cs">
-      <DependentUpon>201706240902153_usman1.cs</DependentUpon>
+    <Compile Include="Migrations\201706290703284_filetype.cs" />
+    <Compile Include="Migrations\201706290703284_filetype.Designer.cs">
+      <DependentUpon>201706290703284_filetype.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
@@ -231,6 +227,7 @@
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\CustomerContactDetail.cs" />
     <Compile Include="Models\Files.cs" />
+    <Compile Include="Models\FilesType.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\messages.cs" />
     <Compile Include="Models\Product.cs" />
@@ -256,6 +253,7 @@
     <Compile Include="viewModels\getprofile.cs" />
     <Compile Include="viewModels\internalTickets.cs" />
     <Compile Include="viewModels\projectDropDownInTickets.cs" />
+    <Compile Include="viewModels\ProjectViewModel\Names.cs" />
     <Compile Include="viewModels\ProjectViewModel\ProjectFileView.cs" />
     <Compile Include="viewModels\ProjectGrid.cs" />
     <Compile Include="viewModels\ProjectInsert.cs" />
@@ -519,11 +517,8 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706221030063_usman.resx">
-      <DependentUpon>201706221030063_usman.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706240902153_usman1.resx">
-      <DependentUpon>201706240902153_usman1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706290703284_filetype.resx">
+      <DependentUpon>201706290703284_filetype.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
