--- a/Task Manager/Task_Manager.csproj
+++ b/Task Manager/Task_Manager.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
@@ -187,6 +188,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="BLL\Vendorcreate.cs" />
+    <Compile Include="Controllers\ActivityLogApiController.cs" />
+    <Compile Include="Controllers\ActivityLogController.cs" />
     <Compile Include="Controllers\angularApiController.cs" />
     <Compile Include="Controllers\CheckStatusApiController.cs" />
     <Compile Include="Controllers\CheckStatusController.cs" />
@@ -215,9 +219,12 @@
     <Compile Include="Controllers\UserProfileApiController.cs" />
     <Compile Include="Controllers\UserProfileController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\VendorApiController.cs" />
+    <Compile Include="Controllers\VendorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Log.cs" />
     <Compile Include="Migrations\201706301026195_usman2.cs" />
     <Compile Include="Migrations\201706301026195_usman2.Designer.cs">
       <DependentUpon>201706301026195_usman2.cs</DependentUpon>
@@ -254,7 +261,24 @@
     <Compile Include="Migrations\201707080734494_dont know.Designer.cs">
       <DependentUpon>201707080734494_dont know.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707130657195_auditlog.cs" />
+    <Compile Include="Migrations\201707130657195_auditlog.Designer.cs">
+      <DependentUpon>201707130657195_auditlog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707130903072_audit.cs" />
+    <Compile Include="Migrations\201707130903072_audit.Designer.cs">
+      <DependentUpon>201707130903072_audit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707150912471_vendor.cs" />
+    <Compile Include="Migrations\201707150912471_vendor.Designer.cs">
+      <DependentUpon>201707150912471_vendor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707171031154_note.cs" />
+    <Compile Include="Migrations\201707171031154_note.Designer.cs">
+      <DependentUpon>201707171031154_note.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AuditLog.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -275,8 +299,12 @@
     <Compile Include="Models\StatusDocuments.cs" />
     <Compile Include="Models\updateTaskReturning.cs" />
     <Compile Include="Models\Users.cs" />
+    <Compile Include="Models\Vendor.cs" />
+    <Compile Include="Models\VendorContact.cs" />
+    <Compile Include="Models\VendorType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMSandEmail.cs" />
+    <Compile Include="viewModels\Activity.cs" />
     <Compile Include="viewModels\clientsTicketRespone.cs" />
     <Compile Include="viewModels\ComplainProjects.cs" />
     <Compile Include="viewModels\customerCityname.cs" />
@@ -319,6 +347,8 @@
     <Compile Include="viewModels\userRequest.cs" />
     <Compile Include="viewModels\users.cs" />
     <Compile Include="viewModels\userview.cs" />
+    <Compile Include="viewModels\Vendor\CreateVendor.cs" />
+    <Compile Include="viewModels\Vendor\VendorDropdown.cs" />
     <Compile Include="viewModels\ViewChatAndDetail.cs" />
     <Compile Include="viewModels\ViewProductDetail.cs" />
     <Compile Include="viewModels\Views\viewUser.cs" />
@@ -493,6 +523,7 @@
     <Content Include="Scripts\Theme JS\metisMenu.min.js" />
     <Content Include="Scripts\Theme JS\sb-admin-2.js" />
     <Content Include="Scripts\UploadFile.js" />
+    <Content Include="Scripts\Vendor.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -544,6 +575,10 @@
     <Content Include="Views\Project\ProjectFileUpload.cshtml" />
     <Content Include="Views\UserProfile\Index.cshtml" />
     <Content Include="Views\Shared\Nonuser.cshtml" />
+    <Content Include="Views\ActivityLog\Index.cshtml" />
+    <Content Include="Views\Vendor\CreateVendor.cshtml" />
+    <Content Include="Views\Vendor\VendorContacts.cshtml" />
+    <Content Include="Views\Vendor\ViewVendor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -578,6 +613,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707080734494_dont know.resx">
       <DependentUpon>201707080734494_dont know.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707130657195_auditlog.resx">
+      <DependentUpon>201707130657195_auditlog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707130903072_audit.resx">
+      <DependentUpon>201707130903072_audit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707150912471_vendor.resx">
+      <DependentUpon>201707150912471_vendor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707171031154_note.resx">
+      <DependentUpon>201707171031154_note.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
