--- a/Task Manager/Task_Manager.csproj
+++ b/Task Manager/Task_Manager.csproj
@@ -228,18 +228,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Log.cs" />
-    <Compile Include="Migrations\201708070559027_requisition_new.cs" />
-    <Compile Include="Migrations\201708070559027_requisition_new.Designer.cs">
-      <DependentUpon>201708070559027_requisition_new.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201708070605413_requisition_issued.cs" />
-    <Compile Include="Migrations\201708070605413_requisition_issued.Designer.cs">
-      <DependentUpon>201708070605413_requisition_issued.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201708070727527_requisition_issu.cs" />
-    <Compile Include="Migrations\201708070727527_requisition_issu.Designer.cs">
-      <DependentUpon>201708070727527_requisition_issu.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AuditLog.cs" />
     <Compile Include="Models\Category.cs" />
@@ -254,6 +242,7 @@
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Requests.cs" />
     <Compile Include="Models\Requisition.cs" />
+    <Compile Include="Models\requisitionItems.cs" />
     <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Models\Tagging.cs" />
@@ -559,17 +548,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201708070559027_requisition_new.resx">
-      <DependentUpon>201708070559027_requisition_new.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201708070605413_requisition_issued.resx">
-      <DependentUpon>201708070605413_requisition_issued.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201708070727527_requisition_issu.resx">
-      <DependentUpon>201708070727527_requisition_issu.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
